repository cards done

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 
     <!-- GLOBAL CSS -->
     <link rel="stylesheet" href="/styles/global.css">
-    <link rel="stylesheet" href="/styles/repositories.css">
 
     <!-- LAYOUT SCRIPT -->
     <script src="/scripts/layout.js"></script>
@@ -22,36 +21,18 @@
     <div id="layout">
 
         <div id="content">
-            <disectionv>
+            <div>
                 Hello World!
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae autem provident molestiae assumenda
                 incidunt. Dolore minima obcaecati voluptatem, ipsam, fuga ipsum aliquid ad iste quaerat nostrum,
                 voluptate impedit voluptates explicabo!
-                </section>
-
-                <!-- REPO -->
-                <div class="repo-card">
-                    <!-- HEADER -->
-                    <header>
-                        <div class="number">1</div>
-                    </header>
-                    <!-- BODY -->
-                    <section>
-                        CONTENT
-                    </section>
-                    <!-- FOOTER -->
-                    <footer>
-                        Visit on Github, Fork, Download
-                    </footer>
-                </div>
-
+            </div>
         </div>
-    </div>
 
-    <!-- FOOTER -->
-    <footer>
+        <!-- FOOTER -->
+        <footer>
 
-    </footer>
+        </footer>
 </body>
 
 </html>
