--- a/repositories.html
+++ b/repositories.html
@@ -8,12 +8,14 @@
 
      <!-- GLOBAL CSS -->
      <link rel="stylesheet" href="/styles/global.css">
+     <link rel="stylesheet" href="/styles/repositories.css">
 
      <!-- LAYOUT SCRIPT -->
      <script src="/scripts/layout.js"></script>
+     <script src="/scripts/repositories.js"></script>
 </head>
 
-<body onload="onLoad()">
+<body onload="onLoad(); loadRepos()">
     <!-- HEADER -->
     <div id="header-anchor"></div>
 
