more repo cards, responsive layout

--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
     <!-- HEADER -->
     <div id="header-anchor"></div>
 
-    <!-- CONTENT -->
-    <div id="layout">
-
+    <div class="layout">
+        <!-- CONTENT -->
         <div id="content">
             <div>
                 Hello World!
