--- a/repositories.html
+++ b/repositories.html
@@ -6,25 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jannicks Repositories</title>
 
-     <!-- GLOBAL CSS -->
-     <link rel="stylesheet" href="/styles/global.css">
-     <link rel="stylesheet" href="/styles/repositories.css">
+    <!-- GLOBAL CSS -->
+    <link rel="stylesheet" href="/styles/global.css">
+    <link rel="stylesheet" href="/styles/repositories.css">
 
-     <!-- LAYOUT SCRIPT -->
-     <script src="/scripts/layout.js"></script>
-     <script src="/scripts/repositories.js"></script>
+    <!-- LAYOUT SCRIPT -->
+    <script src="/scripts/layout.js"></script>
+    <script src="/scripts/repositories.js"></script>
 </head>
 
 <body onload="onLoad(); loadRepos()">
     <!-- HEADER -->
     <div id="header-anchor"></div>
 
-    <!-- CONTENT -->
-    <section id="content">
-        Hello Repositories!
+    <div class="layout">
+        <!-- CONTENT -->
+        <div id="content">
+            My public repositories
 
-        <div id="repos-anchor"></div>
-    </section>
+            <div id="repos-anchor"></div>
+        </div>
+    </div>
 </body>
 
 </html>
