--- a/repositories.html
+++ b/repositories.html
@@ -8,10 +8,12 @@
 
     <!-- GLOBAL CSS -->
     <link rel="stylesheet" href="/styles/global.css">
+    <!-- REPO CSS -->
     <link rel="stylesheet" href="/styles/repositories.css">
 
     <!-- LAYOUT SCRIPT -->
     <script src="/scripts/layout.js"></script>
+    <!-- REPO SCRIPT -->
     <script src="/scripts/repositories.js"></script>
 </head>
 
