--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <!-- GÄSTEBUCH -->
             <section>
                 <h1>Mein Gästebuch</h1>
-                <form id="gaestebuch-form" action="/Phase1HTML/geastebuch.html" method="get">
+                <form id="gaestebuch-form" action="/gaestebuch.html" method="get">
 
                     <!-- NAME -->
                     <label for="name">Ihr Name:<span>*</span></label>
@@ -150,7 +150,7 @@
 
                     <!-- WERTUNG -->
                     <label for="wertung">Gefällt Ihnen meine Webseite?</label>
-                    <div>
+                    <div class="wertung-container">
                         <label for="ja">👍
                             <input type="radio" name="wertung" id="ja">
                         </label>
