--- a/gaestebuch.html
+++ b/gaestebuch.html
@@ -30,8 +30,8 @@
                 <h1>Vielen Dank für Ihre Rückmeldung!</h1>
 
                 <!-- IMAGE -->
-                <img class="image-full" src="https://ts4aqa.db.files.1drv.com/y4paQlX7k1znNqp_3rBtR-Ht5JLdrnXg5ylvI6EMcesB9InNHVjV-55U-KI4D-LNzWOLq7CboHzcIM5rnzSb8vz8x9--36t1nKREVRx-opioom51OJ2hfSTIlldx6Y7LJQbO1xPH4aiVSSMSVBgEY689mlvHu-niBelEXqOOuITTPdBpNeBS3rANKJBGYvZt0d0pUKRTYDa0fQSgkZMSPJpna4qTD6TiFUrKZizhp42fag/IMG_20200712_203224.jpg?psid=1"
-                    alt="Blick über den Hochwald">
+                <img class="image-full" src="./assets/HochwaldImWinter.jpg"
+                    alt="Blick über den Hochwald im Winter">
             </section>
 
 
