css added, media added

--- a/index.html
+++ b/index.html
@@ -38,8 +38,12 @@
 
             <!-- IMAGE -->
             <section>
-                <h1>Wir sind im Internet, also hier ein Bild von meiner Katze!</h1>
-                <img src="./assets/pepps.jpg" width="600px" alt="Meine Katze Pepps">
+                <h1>Wir sind im Internet, also hier ein Bild und ein Video von meiner Katze!</h1>
+                <img class="rounded-border-media mb" src="./assets/pepps.jpg" width="600px" alt="Meine Katze Pepps">
+
+                <video class="rounded-border-media" controls width="600px" alt="Pepps gefällt die heutige Schlagzeile überhaupt nicht.">
+                    <source src="./assets/PeppsVsVolksfreund.mp4" type="video/mp4">
+                </video>
             </section>
 
             <!-- MORE INFO ABOUT ME -->
