index and guestbookas oop

--- a/gaestebuch.html
+++ b/gaestebuch.html
@@ -16,7 +16,7 @@
     <script src="/scripts/layout.js"></script>
 </head>
 
-<body onload="onLoad()">
+<body onload="initializeLayout()">
     <!-- HEADER -->
     <div id="header-anchor"></div>
 
