--- a/hobbies.html
+++ b/hobbies.html
@@ -16,7 +16,7 @@
     <script src="/scripts/hobbies.js"></script>
 </head>
 
-<body onload="onLoad(); initialize()">
+<body onload="initializeLayout(); initializeHobbies()">
     <!-- HEADER -->
     <div id="header-anchor"></div>
 
