--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="/scripts/layout.js"></script>
 </head>
 
-<body onload="onLoad()">
+<body onload="initializeLayout()">
     <!-- HEADER -->
     <div id="header-anchor"></div>
 
