fixed bug after oop switch

--- a/gaestebuch.html
+++ b/gaestebuch.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/styles/global.css">
 
     <link rel="stylesheet" href="/styles/hobbies-table.css">
-    <link rel="stylesheet" href="/styles/geastebuch.css">
+    <!-- <link rel="stylesheet" href="/styles/geastebuch.css"> -->
 
     <!-- LAYOUT SCRIPT -->
     <script src="/scripts/layout.js"></script>
