--- a/repositories.html
+++ b/repositories.html
@@ -17,7 +17,7 @@
     <script src="/scripts/repositories.js"></script>
 </head>
 
-<body onload="initializeLayout(); loadRepos()">
+<body onload="initializeLayout(); initializeRepositories()">
     <!-- HEADER -->
     <div id="header-anchor"></div>
 
