--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <!-- LAYOUT SCRIPT -->
     <script src="/scripts/layout.js"></script>
+    <script src="/scripts/gaestebuch-form.js"></script>
 </head>
 
 <body onload="initializeLayout()">
@@ -162,7 +163,7 @@
             <!-- GÄSTEBUCH -->
             <section>
                 <h1>Mein Gästebuch</h1>
-                <form id="gaestebuch-form" action="/gaestebuch.html" method="get">
+                <form id="gaestebuch-form" name="gaestebuch-form" action="/gaestebuch.html" method="get" onsubmit="onSubmit(event)">
 
                     <!-- NAME -->
                     <label for="name">Ihr Name:<span>*</span></label>
@@ -170,26 +171,26 @@
 
                     <!-- Mail -->
                     <label for="mail">Ihre Mail <i>(für Rückfragen)</i>:<span>*</span></label>
-                    <input required type="email" name="mail" id="mail">
+                    <input required type="email" name="mail" id="mail" placeholder="jungblj@hochschule-trier.de">
 
                     <!-- TEXT -->
                     <label for="text">Ihre Nachricht an mich:<span>*</span></label>
                     <textarea required rows="5" type="text" name="text" id="text"></textarea>
 
-                    <!-- WERTUNG -->
-                    <label for="wertung">Gefällt Ihnen meine Webseite?</label>
-                    <div class="wertung-container">
+                    <!-- RATING -->
+                    <label for="rating">Gefällt Ihnen meine Webseite?</label>
+                    <div class="rating-container">
                         <label for="ja">👍
-                            <input type="radio" name="wertung" id="ja">
+                            <input type="radio" name="rating" id="ja" value="true">
                         </label>
                         <label for="nein">👎
-                            <input type="radio" name="wertung" id="nein">
+                            <input type="radio" name="rating" id="nein" value="false">
                         </label>
                     </div>
 
                     <i>(<span>*</span> = benötigte Angabe)</i>
 
-                    <button type="submit">Absenden</button>
+                    <button onclick="preSubmit()" type="submit">Absenden</button>
                 </form>
             </section>
         </main>
