function as class

--- a/gaestebuch.html
+++ b/gaestebuch.html
@@ -30,8 +30,7 @@
                 <h1>Vielen Dank für Ihre Rückmeldung!</h1>
 
                 <!-- IMAGE -->
-                <img class="image-full" src="./assets/HochwaldImWinter.jpg"
-                    alt="Blick über den Hochwald im Winter">
+                <img class="image-full" src="./assets/HochwaldImWinter.jpg" alt="Blick über den Hochwald im Winter">
             </section>
 
 
