--- a/hobbies.html
+++ b/hobbies.html
@@ -22,7 +22,7 @@
 
     <div class="layout">
         <main id="content">
-            <div id="greeting-anchor"></div>
+            <div id="heading-anchor"></div>
         </main>
     </div>
 </body>
