--- a/index.html
+++ b/index.html
@@ -163,7 +163,8 @@
             <!-- GÄSTEBUCH -->
             <section>
                 <h1>Mein Gästebuch</h1>
-                <form id="gaestebuch-form" name="gaestebuch-form" action="/gaestebuch.html" method="get" onsubmit="onSubmit(event)">
+                <form id="gaestebuch-form" name="gaestebuch-form" action="/gaestebuch.html" method="get"
+                    onsubmit="onSubmit(event)">
 
                     <!-- NAME -->
                     <label for="name">Ihr Name:<span>*</span></label>
