added some content to hobbies

--- a/hobbies.html
+++ b/hobbies.html
@@ -32,6 +32,10 @@
             </section>
 
             <section>
+                <div id="content-anchor"></div>
+            </section>
+
+            <section>
                 <button class="button" onclick="hc.openWindow(hc.getImageUrl(hc.type), 1400, 1000, true)">Open resource
                     in new window</button>
             </section>
